--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "b:test:client": "cd client && bun run b:test",
     "b:test:api": "cd api && bun run b:test",
     "b:balance": "bun config/add-balance.js",
-    "b:list-balances": "bun config/list-balances.js"
+    "b:list-balances": "bun config/list-balances.js",
+    "build": "npm run build:data-provider && npm run frontend"
   },
   "repository": {
     "type": "git",
