Revert: Enhanced theme support with GCP and AWS themes

--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "b:test:client": "cd client && bun run b:test",
     "b:test:api": "cd api && bun run b:test",
     "b:balance": "bun config/add-balance.js",
-    "b:list-balances": "bun config/list-balances.js",
-    "build": "npm run build:data-provider && cd client && npm run build"
+    "b:list-balances": "bun config/list-balances.js"
   },
   "repository": {
     "type": "git",
