--- a/client/package.json
+++ b/client/package.json
@@ -87,7 +87,9 @@
     "regenerator-runtime": "^0.14.1",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
+    "rehype-parse": "^9.0.0",
     "rehype-raw": "^6.1.1",
+    "rehype-react": "^8.0.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-supersub": "^1.0.0",
