--- a/client/package.json
+++ b/client/package.json
@@ -90,6 +90,7 @@
     "rehype-parse": "^9.0.0",
     "rehype-raw": "^6.1.1",
     "rehype-react": "^8.0.0",
+    "rehype-video": "^2.1.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-supersub": "^1.0.0",
